--- a/content/post/20221218二零二二年播客指北.md
+++ b/content/post/20221218二零二二年播客指北.md
@@ -4,6 +4,7 @@ date= 2022-12-18T13:25:26+08:00
 type = "post"
 categories = ["技术"]
 comments = false
+toc = true
 reward = false
 aplayer = false
 mathjax = false
