--- a/content/post/20230106 富士通A4电子纸固件新机能.md
+++ b/content/post/20230106 富士通A4电子纸固件新机能.md
@@ -3,6 +3,7 @@ title= "富士通A4电子纸固件新机能"
 date= 2023-01-07T09:15:26+08:00
 type = "post"
 draft = false
+toc = true
 categories = ["技术"]
 comments = false
 reward = false
@@ -47,7 +48,7 @@ tags = ["quaderno","firmware","功能","固件"]
 電源を切り、再度電源ボタンを押して起動してください。
 ```
 
-## 如何使用「暗记模式」
+### 如何使用「暗记模式」
 
 暗记模式是类似于anki的背诵记忆功能，官网出了该功能的三项使用小贴士[^1][^2][^3]
 
@@ -63,7 +64,7 @@ tags = ["quaderno","firmware","功能","固件"]
 
 {{< youtube nP847nViM58 >}}
 
-## 如何设置「休眠屏保」[^4]
+### 如何设置「休眠屏保」[^4]
 
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/security02.jpg" alt="機能：スリープ画面に設定（画面選択）">}}
 
@@ -74,7 +75,7 @@ tags = ["quaderno","firmware","功能","固件"]
 **STEP 3.** 从三种类型中选择：“正常”、“选定页面”和“睡眠前屏幕”。进入睡眠屏幕设置（选择屏幕）（也可在浏览pdf文档时，通过菜单项将喜欢的某一页设置为休眠屏保[^5]）
 
 
-## 如何使用「连续翻页」[^6]
+### 如何使用「连续翻页」[^6]
 
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/read01.jpg" alt="機能：連続ページめくり">}}
 
