--- a/content/post/20221218二零二二年播客指北.md
+++ b/content/post/20221218二零二二年播客指北.md
@@ -8,6 +8,7 @@ toc = true
 reward = false
 aplayer = false
 mathjax = false
+codes = ["bash"]
 slug = "Simple Guide On Podcast"
 keywords = ["youtube","podcast","播客"]
 tags = ["youtube","podcast","播客"]
