--- a/content/post/20230106 富士通A4电子纸固件新机能.md
+++ b/content/post/20230106 富士通A4电子纸固件新机能.md
@@ -9,6 +9,7 @@ comments = false
 reward = false
 aplayer = false
 mathjax = false
+codes = ["bash"]
 slug = "Fujitsu Quaderno A4 2nd Gen new firmware with several new functions"
 keywords = ["quaderno","firmware","功能","固件"]
 tags = ["quaderno","firmware","功能","固件"]
@@ -64,9 +65,11 @@ tags = ["quaderno","firmware","功能","固件"]
 
 {{< youtube nP847nViM58 >}}
 
-### 如何设置「休眠屏保」[^4]
+### 如何设置「休眠屏保」
 
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/security02.jpg" alt="機能：スリープ画面に設定（画面選択）">}}
+
+官网小贴士[^4]
 
 **STEP 1.** 点击“主页按钮”→“主页菜单”→“设置”→“设备设置”。
  
@@ -75,9 +78,11 @@ tags = ["quaderno","firmware","功能","固件"]
 **STEP 3.** 从三种类型中选择：“正常”、“选定页面”和“睡眠前屏幕”。进入睡眠屏幕设置（选择屏幕）（也可在浏览pdf文档时，通过菜单项将喜欢的某一页设置为休眠屏保[^5]）
 
 
-### 如何使用「连续翻页」[^6]
+### 如何使用「连续翻页」
 
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/read01.jpg" alt="機能：連続ページめくり">}}
+
+官网小贴士[^6]
 
 **STEP 1.** 在屏幕的两边侧滑动，会自动刷新翻到上/下一页。向相反方向滑动可返回上/下一页。
 
