fixed douban shortcode

--- a/content/post/20190329切斯特顿句子摘录.md
+++ b/content/post/20190329切斯特顿句子摘录.md
@@ -2,16 +2,16 @@
 title= "切斯特顿句子摘录"
 date= 2019-03-29T14:22:46+08:00
 categories = ["文学"]
-comments = true
-reward = true
+comments = false
 douban = true
+reward = true
 mathjax = false
 slug = "Quotes of Chesterton"
 keywords = ["切斯特顿","Chesterton"]
 +++
 ## 异教徒
 
-{{< douban 9787108036919 >}}
+{{< douban src="https://book.douban.com/subject/6025826/" >}}
 
 人的良心中现在充满的是非常明确的恶的概念，却没有任何明确的善的概念。从今以后，光对于我们一定是黑的东西——我们无法述说的东西。
 
@@ -29,7 +29,7 @@ keywords = ["切斯特顿","Chesterton"]
 
 ## 改变就是进步？ - 切斯特顿随笔
 
-{{< douban 9787547301906 >}}
+{{< douban src="https://book.douban.com/subject/4882130/" >}}
 
 左右人类行为的其实并不是他怎么想，更关键的是他要怎么想。每天进入视野的影像都会给我们的思想染上不同的颜色，从傲慢到恐惧，色彩丰富、层次分明。在现代的国家巨轮上，这是社会阶级严重分化之后所暴露的最大弊病之一。
 
@@ -47,7 +47,7 @@ keywords = ["切斯特顿","Chesterton"]
 
 ## 布朗神父探案全集
 
-{{< douban 9787540458300 >}}
+{{< douban src="https://book.douban.com/subject/25793743/" >}}
 
 我一点也不反对被捕，反倒是你可能会反对逮捕我。我并不介意，在人格毫不受损的情况下离开法庭，可是你多半会介意带着自己事业中的一个重挫离开法庭。
 
