fixed all douban shortcodes bugs

--- a/content/post/20060406衣柜里的感动.md
+++ b/content/post/20060406衣柜里的感动.md
@@ -9,7 +9,7 @@ mathjax = false
 slug = "inspiration in closet"
 tags= ["电影"]
 +++
-{{< douban 1451413 >}}
+{{< douban src="https://movie.douban.com/subject/1451413/" >}}
 
 镶嵌了衣柜字样的题文并非坦明影片拉家常靠锅碗瓢盆就煮出你的沸点或者展现男男女女短刃相接的出柜体裁，相反，那是被童话色彩笼罩的、被下暸樟脑丸式清心去咒的剧本净土，无恨有爱怜，无愁有宽恕。
 
