--- a/content/post/20060407午后悬铃木.md
+++ b/content/post/20060407午后悬铃木.md
@@ -20,7 +20,7 @@ slug = "London Planetree after Noon"
 
 那一刹，想起日式屋檐下桔梗花的传统风铃，叮叮当当地随风摆附。想起美耶笔下摇著团扇消夏避暑的江户仔们。想起熊仓隆敏笔下碧透乡野的漫画《意外》。浮想不停，联秘翩翩。
 
-{{< douban 9784063142976 >}}
+{{< douban src="https://book.douban.com/subject/1899517/" >}}
 
 匆匆赶脚程回屋查实了一下。植物学家劳伯勋在《花草杂谈》里告诉我们说，此梧桐非彼梧桐。法国梧桐是悬铃木科的，和真正的的梧桐（梧桐科落叶乔木）绝攀不上亲戚，就像人潮里千万个名似而族不同的男男女女一样。
 
