--- a/content/post/20061003天阴雨湿之夜，月落参横之晨.md
+++ b/content/post/20061003天阴雨湿之夜，月落参横之晨.md
@@ -11,10 +11,12 @@ slug = "Tales of Ugetsu"
 keywords = ["电影","沟口健二"]
 tags = ["电影"]
 +++
-{{< douban 1303577 >}}
+{{< douban src="https://movie.douban.com/subject/1303577/" >}}
 
 沟口健二的这部《雨月物语》改编自江户时代作家上田秋成的同名怪谈小说，书名一说是摘自《牡丹灯记》中“天阴雨湿之夜，月落参横之晨”的诗句，嚼舌之余，阴森乖戾，拿来定题。沟口也只抽取了其中《浅茅之宿》与《蛇性之淫》两则故事，耦合成片。
+
 <!--more-->
+
 从开篇堂皇的立言牌坊来看，宣扬不过是一种隐忍无欲的东方传统处世之道。映画中的画屏、锣鼓、咿呀宛冽的芦笛、和歌、三弦、幽昧的烛火、如樱飘落的幽哀……每每停浮了静止的轴卷画之美。恭恭敬敬地想看完，可无所不在的说教、罗嗦的对白实在让我腻烦。
 
 两个浮世男人源十郎和藤兵工做的是烧瓷买卖，甲想发财，乙想做官，殊途同归，为名为利。偶然的纷乱战事让两人得以离开闭塞的乡村，各怀鬼胎，四处闯荡，…然后离奇志怪遭遇又将二人打回原型，从而很自然地完成一场做人须“安贫乐道，知足常乐”的警世鬼剧。美好吧，理想吧。 果真如此？
