--- a/content/post/20061123倪萍上身.md
+++ b/content/post/20061123倪萍上身.md
@@ -15,7 +15,7 @@ tags = ["速写"]
 <!--more-->
 感恩流涕并非什么特异功能，低等动物更无需积分VIP，临刑前攀附上救命判官，绝望时邂逅落魄同道人，仅此。风月宝鉴，春光无限，撩我啊撩我，合掌掀翻欧吉桑林夕阿伯神龛：脸颊苍白，内心焦黄，口口声声五饼二鱼，忤违自然法则。
 
-{{< douban 1308574 >}}
+{{< douban src="https://movie.douban.com/subject/1308574/" >}}
 
 乌拉拉，近期狂恋「はつ恋」里的田中丽奈，片中堪称百变星君，每一镜每一型，清馨服饰真倾心，决心拋屋掷宅也要添置玉人写真集，怕什么耗金不菲。抡拳注目升旗，以一公升国际主义博爱的名义，号令冻锁西伯利亚性冷感，完结帕金森痴呆症。
 
