--- a/content/post/20061128无厘头森林之第一次接触.md
+++ b/content/post/20061128无厘头森林之第一次接触.md
@@ -10,9 +10,8 @@ mathjax = false
 slug = "funky forest"
 keywords = ["电影","石井克人"]
 tags = ["电影"]
-
 +++
-{{< douban 1419044 >}}
+{{< douban src="https://movie.douban.com/subject/1419044/" >}}
 
 没看过不紧要D「party 7」、「鲨皮男与蜜桃女」、但至今难忘他的清新薄荷一派。其实，石井克人不乏澹淡写意的功底，「茶之味」镜头远离了喧嚣炽热的闹市，留驻在大概是京都的某个偏远小山村。青山缭绕、碧水晴空，暧昧的樱树、绿油油的梯田，春野一家六口悠然安逸地过著小日子。古式建筑的廊檐下，叔叔横卧在杉木地板上小憩、盘腿而坐的爸爸跟儿子下围棋、贤淑的漫画家妈妈忙里偷闲地守在爸爸身旁，神情矍铄的爷爷研习舞伎样板，一派恬静幽然的传统居家风情。
 
