--- a/content/post/20061204上海烤鸭.md
+++ b/content/post/20061204上海烤鸭.md
@@ -19,7 +19,7 @@ tags = ["电影"]
 
 在“明月影、暗尘侵”的「上海异人娼馆」里，处处惊旧恨，遽如许，掩不住旧梦惆怅。虐的伎俩如淤泥青莲，看似浊俗的骨肉身形里个个树著绮色牌坊，娼女好似受过上流社会熏染、洗尽凡心、满身清露的贞小姐。“窄窗低户深映，坐看流年轻度”的长镜头已够诗意，偏虚构出阴沟污水中仙乐飘飘，还是贼高雅、贼纯洁的钢琴声，到了中段又出现过譬如“让你的管弦乐队演奏忧郁的华尔兹音乐”这么拆台仆街的红批台词。寺山到底舞台剧出身的底子，连易装癖的老鸨都几视觉系，精致分明的轮廓，再捻烟头回星眸，活活一个三十四年代上海滩版的David Bowie，不过我对老鸨非常有好感，或者说我对老鸨这个行业非常有好感。
 
-{{< douban tt0082422 >}}
+{{< douban src="https://movie.douban.com/subject/1300899/" >}}
 
 寺山专台的“动物世界”众生相真是好奇妙，或者说不可思议。
 
