--- a/content/post/20061205凉风有信.md
+++ b/content/post/20061205凉风有信.md
@@ -11,7 +11,7 @@ slug = "cool breeze sends a message"
 keywords = ["西岛秀俊","电影"]
 tags = ["电影"]
 +++
-{{< douban 1828008 >}}
+{{< douban src="https://movie.douban.com/subject/1828008/" >}}
 
 喜欢风，凉风有信。也喜欢月，秋月无边。巴不得风月人生，多骚！「再见，少女」里拂晓前逶迤的山道公路上,借著碎草月色，夕子用了足足一个霄夜去漫踱回程。但是一个霄夜,到底要搭上多少日日夜夜才能付之风月一笑呢？
 
