--- a/content/post/20070115这一刻.md
+++ b/content/post/20070115这一刻.md
@@ -15,7 +15,7 @@ tags = ["摄影"]
 
 后四张来源:佐内正史去年超华丽的女俳优系列写真集「a girl like you 君になりたい。」。
 <!--more-->
-{{< douban 9784838716111 >}}
+{{< douban src="https://book.douban.com/subject/1959986/" >}}
 
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20200321222314.png" >}}
 
