--- a/content/post/20070702携带雪花，或被雪花携带.md
+++ b/content/post/20070702携带雪花，或被雪花携带.md
@@ -14,7 +14,7 @@ tags = ["速写"]
 > 携带雪花，或被雪花携带
 > &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;－小读「京都一年」
 
-{{< douban 9789571424217 >}}
+{{< douban src="https://book.douban.com/subject/1898718/" >}}
 
 善变文字魔法的卡尔维诺，在「看不见的城市」里叙说了段寓言，少年跋山涉水，才抵至伊西朵拉 － 幼时的梦中旅地、卡氏的天空之城Laputa。在那里，有堵墙垣，名曰老人墙。耄耋老者守望过往行人于斯，昔时少年行了几步过去，席地坐于其中，把年华与冀望一并坐成了玉带似水的追忆。
 <!--more-->
