--- a/content/post/20070829归田琐记.md
+++ b/content/post/20070829归田琐记.md
@@ -13,7 +13,7 @@ keywords = ["摘录","古籍"]
 tags = ["转载"]
 +++
 
-{{< douban 9787532563616 >}}
+{{< douban src="https://book.douban.com/subject/20434505/" >}}
 
 ## 鰣鱼
 
