--- a/content/post/20070910因为幸福，所以痛苦.md
+++ b/content/post/20070910因为幸福，所以痛苦.md
@@ -12,7 +12,7 @@ keywords = ["阪本順治","电影"]
 tags = ["电影"]
 +++
 
-{{< douban 1306044 >}}
+{{< douban src="https://movie.douban.com/subject/1306044/" >}}
 
 早年的阪本順治、推崇暴力美学，甚过北野武。不过，更倾心他暴烈之后的“年老色衰”，爱他镜头下“魂萌”时代的家庭戏，每个家，都是无限重复、却又无法逃离的迷宫。无论出逃、无论沦陷，你都是败寇。00年“丑女大翻身”的『顔/脸』，03年改编西原理惠子同名漫画的“单亲烈女传”『ぼくんち/生命中的岛屿』，以及今年改编桐野夏生同名小说的“丧夫回魂记”『魂萌え！/觉醒』。
 
