--- a/content/post/20080221未逢寒食已除烟 .md
+++ b/content/post/20080221未逢寒食已除烟 .md
@@ -21,7 +21,7 @@ tags = ["速写"]
 <!--more-->　　　
 她没有推杯换盏的静好，只有罗裾飘曳，进酒于前的蓬勃和妄然。人生最可爱就在那一撒手。青丝未理，无患耿耿。无怪英国人把吃糖称consume sugar，实在可圈可点，「甜」越要越耗。甜得久了，也变得木肤肤，何况「苦」。说“长的是磨难，短的是人生。”只惊霸占了自私，活成了霸桥柳色。格雷厄姆·格林附魂The Quiet American主人翁，「在尚未冷淡时, 我心里忽然生出了对终点的恐惧, 于是抢先一步, 未等到分手的结局自己先逃了。」 从小就想死、信奉虚无的他到底磨磨蹭蹭捱到耄耋之年才呜呼哀哉，大讽刺。
 
-{{< douban 1421673 >}}
+{{< douban src="https://movie.douban.com/subject/1421673/" >}}
 
 国人脊梁骨、左派鲁迅曾良心发现，犯案招供炒作情事一碟。似曾相识的《伤逝》俨然punch line密过五线谱的易容「忏悔录」，最适八卦人士下菜佐料。相较令竖子成名、在千夫前的横眉冷对，在生妻灵位（当她死了便好）负荆俯首更好看的紧。涓生是个自视新潮但狠不到火候的culture shock劣等品、一介穷酸书生以为握紧笔杆会针砭时弊会风花雪月就是alpha人类。到底丑出萧墙，露了洋相，花事腐坏却未敢出口，动辄哀怨酸愁满纸，在莲子百心的殷勤下有万般留不住。昏头一时猴急向被引诱的女青年屈膝求婚, 子君在婚后一味眷恋重温旧时情爱, 只让他倍感难堪。明知子君“颓唐”缘由在自身，明明是自己“凄苦和无聊”。故作红尘万丈的挽怜状，叹息“人是多么容易改变呵！” 文艺战士上得武斗台，上不得餐桌，竟计较起「我的地位在于阿随（狗的名字）和油鸡之间」，每日耿耿于怀的是阿随吃的肉比他吃到的竟还多些，又嘟囔「每日只是川流不息的吃饭...，也不想到我的构思就常常为了这催促吃饭而打断」婚后一地鸡毛的琐碎是他料想不到欲将翻悔的，「终于是用包袱蒙着头，由我带倒西郊去放掉了。还要追上来，便推在一个并不很深的土坑里。」眼中钉阿随终于被放掉了，且喃喃自语，"土坑并不很深"，笑得齿寒。朱安守了一世活寡，「基度山女伯爵」未成胎便死腹中，女主角子君遂成亡灵，春色去来多少恨，画眉夫婿几曾知。被亏心负义纵使绵被千重怕也是彻骨冰寒。
 
