--- a/content/post/20080524向田邦子 | 没有写字的明信片.md
+++ b/content/post/20080524向田邦子 | 没有写字的明信片.md
@@ -51,6 +51,6 @@ tags = ["转载","向田邦子"]
 三十一年后的今天，父亲已然过世，妹妹也到了跟当时父亲相近的年岁。那叠没有写字的明信片，是谁收了起来还是遗失了，我竟一次也没见过。
 
 
-{{< douban 9789861244877 >}}
+{{< douban src="https://book.douban.com/subject/1434314/" >}}
 
 ◎ 节录自忆尘译版『 女儿的道歉信 』，麦田出版社
