--- a/content/post/20190329切斯特顿句子摘录.md
+++ b/content/post/20190329切斯特顿句子摘录.md
@@ -9,6 +9,13 @@ mathjax = false
 slug = "Quotes of Chesterton"
 keywords = ["切斯特顿","Chesterton"]
 +++
+
+萧伯纳的哲学是：保守的理想是有害的，有害不是因为它们保守，而是因为它们是理想，每一个理想都妨碍了人们公平地评判具体事物；每一个关于道德的概括归纳都压制了个体；金规则就是不存在金规则。 萧先生禁止人类拥有严格的道德理想，这就如同一个人禁止人类生育一样。 事实上，萧先生从未看到事物的真相，倘若他看到，他就已经再他们面前屈膝敬拜了。 在注重实际方面，萧先生也许是当今世界最有人性的人，但在比较这个意义上，他是最没有人性之人。 事实上，所有真正的欣赏都建立在谦卑和近乎无知所带来的一种神秘上。...只有在一无所知时才能有所知。 由于谦卑——一切事物中最有趣之物——的缺失，使人们产生了对超人奇怪的坚持。（如果人类不符合进步的哲学，萧先生寻求的不是一种新的哲学，而是一种新人类。
+
+—— G.K.切斯特顿
+
+<!--more-->
+
 ## 异教徒
 
 {{< douban src="https://book.douban.com/subject/6025826/" >}}
