--- a/content/post/20190408微信slogan与波普尔.md
+++ b/content/post/20190408微信slogan与波普尔.md
@@ -27,7 +27,7 @@ You tell me I'm wrong , Then you better prove you're right
 
 >科学发现的理论，都是假说，它们不能够被证明，而只能够被证伪。
 
-{{< douban 9787810836074 >}}
+{{< douban src="https://book.douban.com/subject/3349509/" >}}
 
 由此看来，过去和现在的所有科学理论，只能分为两种：已经被证伪的和暂时没有被证伪的，而那些根本就无法证伪的假说，则不能称作为科学理论，正是有了不断证伪、迭代，科学才会发展。同理，人类进步的动力就是观察、思索和质疑。
 
