--- a/content/post/20190410美丽新世界.md
+++ b/content/post/20190410美丽新世界.md
@@ -36,7 +36,7 @@ keywords = ["打黑除恶","莫谈国事"]
 
 在这片光怪陆离的土地上，意识形态荼毒仍然可以登堂入室，国家主义、民粹主义诸如此类的一套套"主义"依然在阳光下滋长，照样在依靠激发那些危险的感情和仇恨进行运转，即便对象是幼儿。这一幕和赫胥黎笔下描述的美丽新世界何其相似，充斥着御用的巴甫洛夫式思想驯兽师，婴儿一旦接触书本和鲜花随之而来的是电击和警报，直至形成条件反射。
 
-{{< douban 9787801092632 >}}
+{{< douban src="https://book.douban.com/subject/1010668/" >}}
 
 史景迁《知识分子与中国革命》一书的开场白是：
 
@@ -50,7 +50,7 @@ keywords = ["打黑除恶","莫谈国事"]
 >
 >不过，这样做的人往往比别人早些死去。但无可否认，他们常常表现出惊人的智慧，已经看出了这种特殊剧目的潜在方向，明白了这绝不是那种可以让置身于外的人平安无事的戏。”[^2]
 
-{{< douban 9787532745401 >}}
+{{< douban src="https://book.douban.com/subject/3111270/" >}}
 
 从law-based governance of the country（中央编译局的标准译法）到movement-based governance of the country，其背后的政治逻辑是，只需州官放火，不许百姓点灯。斗完官斗民，以斗民安抚官；斗完民又斗官，以斗官安抚民，这也是惯用的老套路，内陆诺贝尔文学奖第一人曾有句“autocracy无胆、民主无量”，甚是精确。
 
