--- a/content/post/20190411下落不明.md
+++ b/content/post/20190411下落不明.md
@@ -49,7 +49,7 @@ keywords = ["达明一派","漫画","法律"]
 
 当时，我就在想他一定看过安童夕马青春漫画《东京80年代》，在古谷实遁走式青春还没爆红的年代，这本漫画如同时光钥匙，旋开了许多油腻抠脚大叔的蓝色青春大门。果然，语录侦探如我在他一本随笔文集里找到了证据。
 
-{{< douban 9789861169828 >}}
+{{< douban src="https://book.douban.com/subject/1800714/" >}}
 
 我是个不圆融于世情的人。有段时间郁郁不得志，还真想学漫画界的吾妻ひでお来一场说走就走的旅行。
 
@@ -63,7 +63,7 @@ keywords = ["达明一派","漫画","法律"]
 
 很多人看到封面上的「全部实话」书腰，笑得像两百多斤的胖子，肥肠乱颤。可是他们没看到另外四个字：「波乱万丈」，如果译成中文，大概是浮沉坎坷、命运多舛的意思吧。
 
-{{< douban 9784872575330 >}}
+{{< douban src="https://book.douban.com/subject/1945286/" >}}
 
 
 [l1]: https://youtu.be/djV11Xbc914
