--- a/content/post/20190411元美京的背.md
+++ b/content/post/20190411元美京的背.md
@@ -4,7 +4,7 @@ date= 2019-04-11T12:47:10+08:00
 type = "post"
 categories = ["电影"]
 draft = false
-douban = true
+douban = false
 reward = true
 mathjax = false
 slug = "Won Mi-Kyeong in Hanging Tree"
