setup waline instead of valine

--- a/content/post/20180805来看一下日本文豪们的学历.md
+++ b/content/post/20180805来看一下日本文豪们的学历.md
@@ -5,7 +5,7 @@ codes = ["bash"]
 mathjax = false
 date= 2018-08-05T11:34:11+08:00
 slug = "successful Japanese authors'education background"
-tags = ["日本","文学"]
+tags = ["日本","文学","转载"]
 keywords = ["日本","文学"]
 +++
 1 ： 風吹けば名無し\[\] 投稿日：2018/08/02(木) 22:42:37.22
