--- a/content/post/20190220日本映画巨匠之学历.md
+++ b/content/post/20190220日本映画巨匠之学历.md
@@ -2,10 +2,10 @@
 title= "日本电影人的学历"
 date= 2019-02-20T18:09:50+08:00
 type = "post"
-tags = ["电影","日本"]
+tags = ["电影","日本","转载"]
 categories = ["电影"]
 slug = "education degree of japanese movie stars"
-keywords = ["日本","电影"]
+keywords = ["日本","电影","转载"]
 description = "日本电影人学历那些事儿"
 +++
 日本电影界对于导演助理的征用，要求具有旧制高校或大学毕业的学历，始于一九三〇年代的中期。当然，所谓电影界，包括从最好到最坏的影片公司，好的则早就高学历化，坏的则很久以后还有容纳低学历者的余地。
