--- a/content/post/20190317芝岭古道行.md
+++ b/content/post/20190317芝岭古道行.md
@@ -4,7 +4,7 @@ date= 2019-03-17T12:11:05+08:00
 mathjax = false
 type = "post"
 toc = true
-comments = true
+comments = false
 categories = ["户外"]
 tags = ["古道","宁波"]
 slug = "A trip to Zhiling acient road"
