--- a/content/post/20190322一个思源破折号的疑惑.md
+++ b/content/post/20190322一个思源破折号的疑惑.md
@@ -6,7 +6,7 @@ type = "post"
 tags = ["hugo"]
 categories = ["前端"]
 codes=["css"]
-comments = true
+comments = false
 mathjax = false
 slug = "an display issue about em dash in Source-Han-Sans font"
 keywords = ["字体","破折号","前端"]
