--- a/content/post/20190322如何计算日期间隔.md
+++ b/content/post/20190322如何计算日期间隔.md
@@ -6,7 +6,7 @@ mathjax =true
 type = "post"
 toc = true
 codes = ["bash","php"]
-comments = true
+comments = false
 tags = ["alfred"]
 slug = "how to calculate the difference between two dates ASAP"
 +++
