--- a/content/post/20190327学琴记之C大调小行板.md
+++ b/content/post/20190327学琴记之C大调小行板.md
@@ -4,7 +4,7 @@ date= 2019-03-27T10:56:47+08:00
 type = "post"
 tags = ["古典吉他","卡尔卡西"]
 categories = ["音乐"]
-comments = true
+comments = false
 abcjs = true
 mathjax = false
 slug = "Andantino in C major"
