--- a/content/post/20190327猫与潮汐.md
+++ b/content/post/20190327猫与潮汐.md
@@ -3,7 +3,7 @@ title= "猫与潮汐"
 date= 2019-03-27T12:34:17+08:00
 type = "post"
 categories = ["萌宠"]
-comments = true
+comments = false
 reward = true
 mathjax = false
 slug = "cat and tides"
