--- a/content/post/20190328假如最高法是一个产品经理.md
+++ b/content/post/20190328假如最高法是一个产品经理.md
@@ -3,7 +3,7 @@ title= "假如最高法是一个产品经理"
 date= 2019-03-28T10:06:39+08:00
 type = "post"
 categories = ["法律"]
-comments = true
+comments = false
 reward = true
 mathjax = false
 slug = "If the Supreme People Court is a product manager"
