--- a/content/post/20190329沧海遗珠.md
+++ b/content/post/20190329沧海遗珠.md
@@ -3,7 +3,7 @@ title= "沧海遗珠"
 date= 2019-03-29T22:54:26+08:00
 type = "post"
 categories = ["音乐"]
-comments = true
+comments = false
 reward = true
 aplayer = true
 mathjax = false
