--- a/content/post/20190403“被绑架”的大师.md
+++ b/content/post/20190403“被绑架”的大师.md
@@ -2,7 +2,7 @@
 title= "“被绑架”的大师"
 date= 2019-04-03T10:29:23+08:00
 type = "post"
-comments = true
+comments = false
 tags = ["古典吉他","指弹吉他"]
 categories = ["音乐"]
 aplayer = true
