--- a/content/post/20190407一个正则错误的背后.md
+++ b/content/post/20190407一个正则错误的背后.md
@@ -50,7 +50,7 @@ to your PATH from your bashrc like:
 ==> Summary
   /usr/local/Cellar/gnu-sed/4.7: 12 files, 561KB
 ```
-原先是新瓶装旧酒，继续沿用seb
+原先是新瓶装旧酒，继续沿用sed
 
 ```bash
 brew install gnu-sed --with-default-names
