--- a/content/post/20190409红白的记忆.md
+++ b/content/post/20190409红白的记忆.md
@@ -5,7 +5,7 @@ type = "post"
 categories = ["琐记"]
 draft = false
 aplayer = false
-comments = true
+comments = false
 reward = true
 mathjax = false
 slug = "OpenEmu recall my chirldhood"
