--- a/content/post/20190417hugo 0.55.0彩蛋版有哪些变化.md
+++ b/content/post/20190417hugo 0.55.0彩蛋版有哪些变化.md
@@ -6,7 +6,7 @@ tags = ["hugo","shortcodes"]
 categories = ["技术"]
 draft = false
 toc = true
-comments = true
+comments = false
 reward = true
 mathjax = false
 codes = ["shell"]
