--- a/content/post/20200223如何快速导入Mac制作的anki牌组.md
+++ b/content/post/20200223如何快速导入Mac制作的anki牌组.md
@@ -7,7 +7,7 @@ reward = true
 codes = ["shell"]
 mathjax = false
 slug = "how to import anki deck from imac to iphone quickly"
-comments = true
+comments = false
 keywords = ["武汉肺炎","anki"]
 tags = ["Anki"]
 +++
