--- a/content/post/20200303hugo升级那些事儿.md
+++ b/content/post/20200303hugo升级那些事儿.md
@@ -10,7 +10,7 @@ codes = ["bash","htmlbars","json","yaml","go"]
 douban = false
 mathjax = false
 slug = "upgrade hugo to 0.6.x"
-comments = true
+comments = false
 keywords = ["Hugo","Upgrade","zeit"]
 tags = ["Hugo"]
 
