--- a/content/post/20230106 富士通A4电子纸固件新机能.md
+++ b/content/post/20230106 富士通A4电子纸固件新机能.md
@@ -5,7 +5,7 @@ type = "post"
 draft = false
 toc = true
 categories = ["技术"]
-comments = false
+comments = true
 reward = false
 aplayer = false
 mathjax = false
