--- a/content/post/20190315markdown插图的另一种写法.md
+++ b/content/post/20190315markdown插图的另一种写法.md
@@ -4,7 +4,7 @@ date= 2019-03-15T13:46:36+08:00
 type = "post"
 tags = ["markdown","hugo"]
 toc = true
-comments = true
+comments = false
 codes =["markdown","php"]
 categories = ["技术"]
 mathjax = false
