--- a/content/post/20221218二零二二年播客指北.md
+++ b/content/post/20221218二零二二年播客指北.md
@@ -3,7 +3,7 @@ title= "2022年播客指北"
 date= 2022-12-18T13:25:26+08:00
 type = "post"
 categories = ["技术"]
-comments = false
+comments = true
 toc = true
 reward = false
 aplayer = false
