--- a/content/post/20190707安装newfetch.md
+++ b/content/post/20190707安装newfetch.md
@@ -62,7 +62,9 @@ fi
 ```
 
 好了，重启zsh就可以看到效果了。
-{{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20190707082759.jpg" >}}
+
+
+{{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/202303171549666.png" >}}
 
 ## 如何配置neofetch
 
