--- a/content/post/20230514评《宇宙探索编辑部》.md
+++ b/content/post/20230514评《宇宙探索编辑部》.md
@@ -4,7 +4,7 @@ date= 2023-04-20T11:22:26+08:00
 type = "post"
 categories = ["电影"]
 comments = false
-douban = ture
+douban = true
 reward = false
 aplayer = false
 mathjax = false
