--- a/content/post/20230514评《宇宙探索编辑部》.md
+++ b/content/post/20230514评《宇宙探索编辑部》.md
@@ -23,7 +23,7 @@ tags = ["电影","国产","宇宙探索编辑部"]
 
 {{< douban src="https://movie.douban.com/subject/34941536/" >}}
 
-这是是今年与儿子看的第二部线下片，片子的内核十分迷因，从形貌上看，是华语罕有的脱力系。韩国有张俊焕的《拯救地球》，日本有三木聪的《乌龟意外之速游》、石井克人的《茶之味》，国内尚无阙如。如果真要算的话，新裤子乐队主唱彭磊土法炼钢作坊式的土味小电影《北海怪兽》算一个。
+这是今年与儿子看的第二部线下片，片子的内核十分迷因，从形貌上看，是华语罕有的脱力系。韩国有张俊焕的《拯救地球》，日本有三木聪的《乌龟意外之速游》、石井克人的《茶之味》，国内尚无阙如。如果真要算的话，新裤子乐队主唱彭磊土法炼钢作坊式的土味小电影《北海怪兽》算一个。
 
 尽管小众题材并不讨喜，但作为九十年代在报刊摊位上搜罗过《奥秘》、《飞碟探索》、《科幻世界》等珍宝的科幻杂志迷们，仅凭片头的寥寥数语便可迅即指认、获取暗语。
 
@@ -54,6 +54,7 @@ tags = ["电影","国产","宇宙探索编辑部"]
 药酒出狂人，你理解哲学家康德、美学家康德、伦理学家康德，但你或许从不了解天文学家康德，他酒后笔下的宇宙是如此庄严宏大、恣肆汪洋：
 
 > 仿佛燃烧着的大阳这个极其稀奇的物体就在我们眼前。人们一眼就看到了一片火焰冲天的辽阔火海，看到了到处是狂怒的风暴，它比火海更加凶猛。当这些风暴在它们的海洋上兴起时，忽而把这天体的高原地带遮盖起来，忽而又使它们露了出来，已停止燃烧的岩石，从喷吐烈焰的火道中伸出可怕的尖峰，它们或者被飘扬的火焰掩盖起来或者被它吐露出来，这就引起大阳黑子的时而出现，时而消失，浓厚的蒸气把火室息，又因暴风升起而形成鸟云，这种乌云又突然化为火流骤雨，向下降落，犹如汹涌的急流从大阳上陆地的高处直向燃烧着的深谷浇去，质点轰然破裂，物质成堆烧成灰烬，自然正在与毁灭作斗争，但正是这自然界自身在它最可怕的解体状态中给世界带来了美丽，给一切生物带来了好处。
+> 
 > ——《关于诸天体的一般发展史和一般理论，或根据牛顿原理试论整个宇宙的结构及其机械起源》节选
 
 
