--- a/content/post/20190410美丽新世界.md
+++ b/content/post/20190410美丽新世界.md
@@ -4,7 +4,7 @@ date= 2019-04-10T11:22:44+08:00
 toc = true
 type = "post"
 categories = ["琐记"]
-draft = false
+draft = true
 douban = true
 reward = true
 mathjax = false
