--- a/content/post/20191013给孩子请个ai职业围棋老师吧.md
+++ b/content/post/20191013给孩子请个ai职业围棋老师吧.md
@@ -16,9 +16,9 @@ keywords = ["围棋","leela-zero","Lizzie"]
 
 常忧虑如今的孩子沉疴在肩，校门口，一眼掠去，个个体不过半百斤，却负笈十余，步履蹒跚，且这还只是体格上的磨砺，精神上尚有数座“大山”压肘着孩童的天性，犹如芒刺在背。
 
-家有一子，如有一劫。小夏今年才上一年级，每天晚上光做课内作业就要“奋战”到九十点光景，还不算课余的兴趣爱好。这学期，小夏除了一以贯之的古典吉他，又新添了足球、围棋等学业课，本以为可以偷闲，岂料授课老师布置的作业比起正课有过之而无不及。单说围棋吧，一周虽仅有一课，但作业足足有 35 页，且都是打、吃、连、断、罩、地、收气、劫等变幻无穷的基本功训练，不免令人生疑，门下弟子是否有消咽之力。
+家有一子，如有一劫。bosco今年才上一年级，每天晚上光做课内作业就要“奋战”到九十点光景，还不算课余的兴趣爱好。这学期，bosco除了一以贯之的古典吉他，又新添了足球、围棋等学业课，本以为可以偷闲，岂料授课老师布置的作业比起正课有过之而无不及。单说围棋吧，一周虽仅有一课，但作业足足有 35 页，且都是打、吃、连、断、罩、地、收气、劫等变幻无穷的基本功训练，不免令人生疑，门下弟子是否有消咽之力。
 
-好在小夏争强好胜，也就是所谓的上进。学棋伊始，天天拉我对弈，起初我也乐于奉陪，但渐渐棋力不支，疲于应战。小夏心生骄意，我意识到是时候请个AI名师出马了。
+好在bosco争强好胜，也就是所谓的上进。学棋伊始，天天拉我对弈，起初我也乐于奉陪，但渐渐棋力不支，疲于应战。bosco心生骄意，我意识到是时候请个AI名师出马了。
 
 {{< img src="https://ian2.oss-cn-hangzhou.aliyuncs.com/clt6/20200228160210.png" >}}
 
