--- a/content/post/20230514评《宇宙探索编辑部》.md
+++ b/content/post/20230514评《宇宙探索编辑部》.md
@@ -15,7 +15,7 @@ tags = ["电影","国产","宇宙探索编辑部"]
 
 ## 速老
 
-众星历历，睥睨万里。一道观影归来的儿子提醒我，今晚有盈月，亮得像一颗苍白的泪珠。传统文学一直在强化我们的对明月的刻板印象，玉盘照人，自是皓洁。不知从哪刻起，NASA月球千疮百孔的高清照涤除了幼年对月球的所有滤镜，这大概是知识后遗症，成人特有的不幸。
+众星历历，睥睨万里。一道观影归来的儿子提醒我，今晚有盈月，亮得像一颗苍白的泪珠。传统文学一直在强化我们对明月的刻板印象，玉盘照人，自是皓洁。不知从哪刻起，NASA月球千疮百孔的高清照涤除了幼年对月球的所有滤镜，这大概是知识后遗症，成人特有的不幸。
 
 二十多年前，严锋老师在《万象》写过一篇《好天》介绍佟连荣、张大庆等民间观星素人，里面有句话我迄今还记的，他说经常抬头看星星的知道什么是大，什么是远，什么是天长地久，对尘世的很多东西难免要淡一些。看《宇宙探索编辑部》的第一秒我就想起了这句话。
 
