update some articles

--- a/content/post/20070508电波少年.md
+++ b/content/post/20070508电波少年.md
@@ -2,6 +2,7 @@
 title= "电波少年还魂"
 date= 2007-05-08T12:34:12+08:00
 type = "post"
+draft = true
 categories = ["音乐"]
 comments = false
 reward = false
