--- a/content/post/20100325手记.md
+++ b/content/post/20100325手记.md
@@ -12,22 +12,22 @@ tags = ["速写"]
 +++
 我调教好的黑莓BB87
 
-iSMS i键快捷发送短信，原先使用qSMS，和KeyMaster默认快捷键q冲突
-Seasou Weather 实用的细搜天气，订制城市，界面华丽，付费后区别甚微
-Berrymail QQ08 BerryMail论坛定制版qq，支持三款皮肤
-Mowriter 力荐！微博集成客户端，突破GFW，畅游Twitter，最新内测版支持zuosa，新浪微博。
-Browser 在谷歌退出前，一直用自带浏览器。通过导入第三方Service Book，可支持自定义页面。期间也试过Opera mini、Bolt、UCweb，徒有虚名
-GBBReader 国内莓友wick所做的黑莓原生TXT电子书软件，速度快，功能全
-MemoryBooster 内存整理软件，用处不大
-Quickwheel 伟大的软件，绝对是黑莓滚轮救星
-LogMaid 系统日志清理，当然也可以手动清理，快捷键为ALT+LGLG
-ClockRevise 时间校对同步，简单易用
+- iSMS i键快捷发送短信，原先使用qSMS，和KeyMaster默认快捷键q冲突
+- Seasou Weather 实用的细搜天气，订制城市，界面华丽，付费后区别甚微
+- Berrymail QQ08 BerryMail论坛定制版qq，支持三款皮肤
+- Mowriter 力荐！微博集成客户端，突破GFW，畅游Twitter，最新内测版支持zuosa，新浪微博。
+- Browser 在谷歌退出前，一直用自带浏览器。通过导入第三方Service Book，可支持自定义页面。期间也试过Opera mini、Bolt、UCweb，徒有虚名
+- GBBReader 国内莓友wick所做的黑莓原生TXT电子书软件，速度快，功能全
+- MemoryBooster 内存整理软件，用处不大
+- Quickwheel 伟大的软件，绝对是黑莓滚轮救星
+- LogMaid 系统日志清理，当然也可以手动清理，快捷键为ALT+LGLG
+- ClockRevise 时间校对同步，简单易用
 <!--more-->
-Mini monistor 流量监控统计
-PhoneTweak 无敌的系统调教软件
-DXNotepad 点讯记事本，由于QQ08不支持中文输入法，一键呼出、一键粘贴的点讯输入法有了用武之地
-SmartDial 智能拨号，支持拼音缩写查找名单
-MissedCall 未接来电提醒
-AutoLock 自动键盘锁
-1clickSMSReport 一键发送，比如查询余额，查询GPRS等常用需求
-KeyMaster 快捷键大师，原先需按H键调出菜单界面，再用滚轮选择点击。现在，最多只需两个键，就能疾速启动
+- Mini monistor 流量监控统计
+- PhoneTweak 无敌的系统调教软件
+- DXNotepad 点讯记事本，由于QQ08不支持中文输入法，一键呼出、一键粘贴的点讯输入法有了用武之地
+- SmartDial 智能拨号，支持拼音缩写查找名单
+- MissedCall 未接来电提醒
+- AutoLock 自动键盘锁
+- 1clickSMSReport 一键发送，比如查询余额，查询GPRS等常用需求
+- KeyMaster 快捷键大师，原先需按H键调出菜单界面，再用滚轮选择点击。现在，最多只需两个键，就能疾速启动
