--- a/content/post/20190531三十周年祭.md
+++ b/content/post/20190531三十周年祭.md
@@ -3,7 +3,7 @@ title= "三十周年祭"
 date= 2019-06-04T10:47:20+08:00
 type = "post"
 categories = ["琐记"]
-draft = true
+draft = false
 reward = false
 douban = false
 mathjax = false
