--- a/content/post/20230618帕肯宁.md
+++ b/content/post/20230618帕肯宁.md
@@ -15,11 +15,11 @@ tags = ["古典吉他","Christopher Parkening"]
 
 对帕肯宁(Christopher Parkening)既爱又恨。
 
-爱他，是因为他曾是古典吉他界的古尔德(Glenn Gould)，将巴赫的音乐教义诠释得那么完美。 恨他，只因其在三十而立的巅峰盛年，戛然引退，跑去种农场、钓鳟⻥，还拿了个钓⻥世界第一，简直是被音乐耽误的钓⻥天才。 但他感到精神的空虚与人生的轻浮，直到遇到巴赫。我能在86年那张专辑『A Bach Celebration』中感受到他的虔诚与忏悔。
+爱他，是因为他曾是古典吉他界的古尔德(Glenn Gould)，将巴赫的音乐教义诠释得那么完美。 恨他，只因其在三十而立的巅峰盛年，戛然引退，跑去种农场、钓鳟⻥，还拿了个钓⻥世界第一，简直是被音乐耽误的钓⻥天才。 他曾直言无法克服内心深处的空虚与人生的轻浮，直到遇到巴赫。86年那张专辑『A Bach Celebration』，满溢着他的虔诚与忏悔。
 
 <!--more-->
 
-特别是他与洛杉矶室内管弦乐团(LACO)合作演奏的We Thank Thee, Load, We Thank Tee(C29)。这首曲子是巴赫1731年为莱比锡市议会就职典礼创作的Wir danken dir, Gott, wir danken dir（我们感谢你，主，上帝，我们感谢你，主）[^1][^2]。
+特别是与洛杉矶室内管弦乐团(LACO)合作演奏的We Thank Thee, Load, We Thank Tee(C29)。这首曲子是巴赫1731年为莱比锡市议会就职典礼创作的Wir danken dir, Gott, wir danken dir（我们感谢你，主，上帝，我们感谢你，主）[^1][^2]。
 
 在巴赫的时代，宗教渗透到生活的各个方面，包括当时的政治活动。
 
